--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+/*style login division*/
 .login{ width:300px;
             background-color: #800080;
             margin:10;
@@ -7,15 +8,16 @@
             border-radius:20px;
             justify-content: center;
 	        text-align: center;
-		    
 }
 
+/*style Login button and Create Account button*/
 .btnlogin,.btnca{
 	height: 30px;
 	border-radius: 10px;
 	color: white;
 	background-color: #6B0377;
 }
+
 
 .login_p{color:white;
                 font-weight:bold;
@@ -26,6 +28,7 @@
 width: 240px;
 height:20px;}
 
+/*modal background style*/
 .bg-modal{
 	width: 100%;
 	height: 100%;
@@ -35,7 +38,10 @@ height:20px;}
 	display: flex;
 	justify-content: center;
 	align-items:center;
+    visibility: hidden;
 }
+
+/*modal content style*/
 .modal-content{
 	width: 300px;
 	height:450px;
@@ -45,7 +51,18 @@ height:20px;}
 	padding: 20px;
 	position: relative;
     display:flex;
-    justify-content: center;}
+    justify-content: center;
+    visibility: hidden;
+}
+/*This CSS codes for changing the visibility
+of model division on click*/
+.bg-modal:target{
+	visibility: visible;
+}
+#bg_modal:target .modal-content{
+	visibility: visible;
+}
+
 
 .button{background-color: blueviolet;
         padding: 5px;
